--- a/config_example.ini
+++ b/config_example.ini
@@ -24,3 +24,6 @@ bathroom = 6
 [RapidAPI]
 X_RapidAPI_Key = YOUR_RapidAPI_API_KEY
 
+[GDS]
+#在https://gds.org.cn注册用户，在请求头中获取Authorization中Bearer后面的内容
+GDS_API_Bearer = Your_GDS_API_Bearer
